Make sure the pre's overflow scrolls

--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -66,6 +66,7 @@ var {
 
 pre {
 	border: $border__pre;
+	overflow: scroll;
 	padding: rem(25);
 }
 
